kubernetes/apps/fugue/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: fugue
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
