kubernetes/apps/fugue/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ct-stream
  namespace: fugue
spec:
  type: ClusterIP
  selector:
    app: ct-stream
  ports:
    - port: 8080
      targetPort: 8080
